# molecule-driver-azure

./: .pre-commit-config.yaml  Makefile  README.rst  TODO.md  pytest.ini  setup.cfg  setup.py  tox.ini
.github/workflows/: tox.yml
molecule_driver_azure/: driver.py
molecule_driver_azure/cookiecutter/{{cookiecutter.molecule_directory}}/{{cookiecutter.scenario_name}}/: backup.yml  deallocate.yml  molecule.yml  restore.yml  stop.yml  verify.yml
molecule_driver_azure/test/: test_driver.py
molecule_driver_azure/test/functional/: test_azure.py
molecule_driver_azure/test/scenarios/driver/azure/molecule/default/: converge.yml  molecule.yml
molecule_driver_azure/test/scenarios/driver/azure/molecule/multi-node/: converge.yml  molecule.yml
molecule_driver_azure/test/scenarios/driver/azure/molecule/multi-node/tests/: test_default.py
