[aliases]
dists = clean --all sdist bdist_wheel

# [metadata]

# [project]
[metadata]
version = 0.0.4
name = molecule-driver-azure
url = https://github.com/redhat-sap/molecule-driver-azure
project_urls =
    Bug Tracker = https://github.com/redhat-sap/molecule-driver-azure/issues
    Release Management = https://github.com/redhat-sap/molecule-driver-azure/releases
    CI = https://github.com/redhat-sap/molecule-driver-azure/actions

    Documentation = https://github.com/redhat-sap/molecule-driver-azure
    Source Code = https://github.com/redhat-sap/molecule-driver-azure
description = Molecul Driver for Azure :: run molecule tests on Azure compute infrastructure
long_description = file: README.rst
long_description_content_type = text/x-rst
author = https://github.com/kksat
maintainer = https://github.com/kksat
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Framework :: Pytest
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

    Topic :: System :: Systems Administration
    Topic :: Utilities

keywords =
    ansible
    roles
    testing
    molecule
    azure

[options]
# version="0.0.2"
use_scm_version = False
python_requires = >=3.6
packages = find_namespace:
include_package_data = True
zip_safe = False

# These are required during `setup.py` run:
setup_requires =
    setuptools_scm >= 1.15.0
    setuptools_scm_git_archive >= 1.0

# These are required in actual runtime:
install_requires =
    # molecule plugins are not allowed to mention Ansible as a direct dependency
    molecule >= 3.2.0a0

[options.extras_require]
test =
    molecule[ansible,test]

[options.entry_points]
molecule.driver =
    molecule-driver-azure = molecule_driver_azure.driver:MoleculeDriverAzure

[options.packages.find]
where = .

[options.package_data]
where =
    molecule_driver_azure/*
